feat: allow updating user
