# backend/src/account/account.controller.ts
@@ -1,4 +1,11 @@
-import { Body, Controller, Patch } from '@nestjs/common';
+import {
+  Body,
+  Controller,
+  Get,
+  HttpCode,
+  HttpStatus,
+  Patch,
+} from '@nestjs/common';
 import { AccountService } from './account.service';
 import { User } from 'src/decorators/user.decorator';
 import { UserEntity } from 'src/users/dto/user.entity';
@@ -7,6 +14,12 @@ import { UpdateUserDto } from 'src/users/dto/update-user.dto';
 @Controller('account')
 export class AccountController {
   constructor(private readonly accountService: AccountService) {}
+
+  @HttpCode(HttpStatus.OK)
+  @Get()
+  async getAccount(@User() user: UserEntity): Promise<UserEntity> {
+    return await this.accountService.getAccount(user.id);
+  }
 
   @Patch()
   async updateAccount(
