# frontend/openapi-spec.json
@@ -120,6 +120,25 @@
       }
     },
     "/account": {
+      "get": {
+        "operationId": "getAccount",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserEntity"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Account"
+        ]
+      },
       "patch": {
         "operationId": "updateAccount",
         "parameters": [],
